--- a/.gitignore
+++ b/.gitignore
@@ -201,7 +201,12 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 
+
 # Marimo
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+.idea
+.gitignore
